--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,20 @@
 /libs
 /build
 /archive
+.classpath
+.idea/
+.project
+.settings/
+CREDITS-fml.txt
+LICENSE-fml.txt
+MinecraftForge-Credits.txt
+MinecraftForge-License.txt
+README.txt
+eclipse/
+forge-1.7.10-10.13.0.1180-changelog.txt
+forge-1.7.10-10.13.0.1180-src.iml
+forge-1.7.10-10.13.0.1180-src.ipr
+forge-1.7.10-10.13.0.1180-src.iws
+gradle/
+gradlew
+gradlew.bat
