--- a/build.gradle
+++ b/build.gradle
@@ -18,26 +18,23 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = newFSPVersion
+group= "com.flaxbeard.Steamcraft"
+archivesBaseName = "Steamcraft"
 
 
 minecraft {
-    version = "1.7.10-10.13.1.1217"
+    version = forgeVersion
     assetDir = "eclipse/assets"
 }
 processResources
 {
-    // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
                 
-        // replace version and mcversion
         expand 'version':project.version, 'mcversion':project.minecraft.version
     }
         
-    // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
