Smarter gradle. You only need to type the version number once, when building :)

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ archivesBaseName = "Steamcraft"
 minecraft {
     version = forgeVersion
     assetDir = "eclipse/assets"
+	replace "@VERSION@", project.version
 }
 processResources
 {
