--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,21 @@
-# Ignore Everything
-/*
-/*/
-
-# Except These
-!/.gitignore
-!/src/
-!/src/main/resources
-!/gradle/
-!/gradlew
-!/gradlew.bat
-!/README
-!/LICENSE
-!/build.properties
-!/build.gradle
-!/version.json
+.git/
+.gradle/
+.idea/
+.settings/
+assets/
+build/
+eclipse/
+idea/
+libs/
+.classpath
+.DS_Store
+.project
+CREDITS-fml.txt
+forge-1.7.10-10.13.0.1180-changelog.txt
+forge-1.7.10-10.13.0.1180-src.iml
+forge-1.7.10-10.13.0.1180-src.ipr
+forge-1.7.10-10.13.0.1180-src.iws
+LICENSE-fml.txt
+MinecraftForge-Credits.txt
+MinecraftForge-License.txt
+README.txt
