Change build.gradle to have proper filename scheme, but I still need to make it ignore a bunch of garbage. Bump version

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ apply plugin: 'forge'
 
 version = newFSPVersion
 group = "com.flaxbeard.Steamcraft"
-archivesBaseName = "Flaxbeard'sSteamPower"
+archivesBaseName = "Flaxbeard'sSteamPower-1.7.10"
 
 
 minecraft {
