--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,7 @@
 forgeVersion=1.7.10-10.13.2.1277
+ic2Version=net.industrial-craft:industrialcraft-2:2.2.718-experimental:dev
+mantleVersion=mantle:Mantle:1.7.10-0.3.2.jenkins187:deobf
+ticVersion=tconstruct:TConstruct:1.7.10-1.8.4.build949:deobf
+naturaVersion=mods.natura:natura:1.7.10-98.6a6cca1:deobf
 
 newFSPVersion=0.28.7
