--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ LICENSE-fml.txt
 MinecraftForge-Credits.txt
 MinecraftForge-License.txt
 README.txt
+
+# Who made this messy crap? Whatever.
+!/fsplib/*.jar
