--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-forgeVersion=1.7.10-10.13.2.1277
-ic2Version=net.industrial-craft:industrialcraft-2:2.2.718-experimental:dev
+forgeVersion=1.7.10-10.13.3.1403-1.7.10
+ic2Version=net.industrial-craft:industrialcraft-2:2.2.723-experimental:dev
 mantleVersion=mantle:Mantle:1.7.10-0.3.2.jenkins187:deobf
 ticVersion=tconstruct:TConstruct:1.7.10-1.8.4.build949:deobf
 naturaVersion=mods.natura:natura:1.7.10-98.6a6cca1:deobf
