--- a/gradle.properties
+++ b/gradle.properties
@@ -3,5 +3,6 @@ ic2Version=net.industrial-craft:industrialcraft-2:2.2.723-experimental:dev
 mantleVersion=mantle:Mantle:1.7.10-0.3.2.jenkins187:deobf
 ticVersion=tconstruct:TConstruct:1.7.10-1.8.4.build949:deobf
 naturaVersion=mods.natura:natura:1.7.10-98.6a6cca1:deobf
+eioVersion=com.enderio:EnderIO:1.7.10-2.3.383_beta
 
 newFSPVersion=0.28.7
