removed babule shit, added broken cofhcore/thermal found shit

--- a/build.gradle
+++ b/build.gradle
@@ -34,13 +34,25 @@ repositories {
 		name = "ic2"
 		url = "http://maven.ic2.player.to/"
 	}
+	
 	maven {
 		name "progwml6"
 		url 'http://dvs1.progwml6.com/files/maven'
 	}
+	
 	maven {
 		name "tterrag Repo"
 		url "http://maven.tterrag.com"
+	}
+	
+	ivy {
+		name "CoFHCore"
+		artifactPattern 'http://addons.cursecdn.com/files/2221/835/[module]-[revision].[ext]'
+	}
+	
+	ivy {
+		name "ThermalFoundation"
+		artifactPattern "http://addons-origin.cursecdn.com/files/2233/780/[module]-[revision].[ext]"
 	}
 }
 
@@ -50,6 +62,8 @@ dependencies {
 	compile ticVersion
 	compile naturaVersion
 	compile eioVersion
+	compile name: 'CoFHCore', version: cofhCoreVersion, ext: 'jar'
+	compile name: 'ThermalFoundation', version: thermalFoundVersion, ext: 'jar'
 	
 	compile fileTree(dir: 'fsplib', include: '*.jar') // Not using 'lib' since I got a lot of crap in there.
 }
