--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,7 @@ mantleVersion=mantle:Mantle:1.7.10-0.3.2.jenkins187:deobf
 ticVersion=tconstruct:TConstruct:1.7.10-1.8.4.build949:deobf
 naturaVersion=mods.natura:natura:1.7.10-98.6a6cca1:deobf
 eioVersion=com.enderio:EnderIO:1.7.10-2.3.0.383_beta
+cofhCoreVersion=[1.7.10]3.0.2-262-dev
+thermalFoundVersion=[1.7.10]1.0.0-81-dev
 
 newFSPVersion=0.28.7
