--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,12 @@ repositories {
 		name = "ic2"
 		url = "http://maven.ic2.player.to/"
 	}
-	
+
 	maven {
 		name "progwml6"
 		url 'http://dvs1.progwml6.com/files/maven'
 	}
-	
+
 	maven {
 		name "tterrag Repo"
 		url "http://maven.tterrag.com"
@@ -48,6 +48,10 @@ repositories {
 		name = "chickenbones"
 		url = 'http://chickenbones.net/maven/'
 	}
+    maven {
+        name "ProfMobius"
+        url "http://mobiusstrip.eu/maven"
+    }
 }
 
 dependencies {
@@ -59,7 +63,7 @@ dependencies {
 	compile codeChickenCoreVersion
 	compile notEnoughItemsVersion
 	compile codeChickenLibVersion
-	
+
 	compile fileTree(dir: 'fsplib', include: '*.jar') // Not using 'lib' since I got a lot of crap in there.
 }
 
@@ -74,4 +78,3 @@ processResources {
         include 'steamcraft/api'
     }
 }
-
