--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,34 @@
 buildscript {
-    repositories {
-        mavenCentral()
-        maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
+	repositories {
+		mavenCentral()
+		maven {
+			name = "forge"
+			url = "http://files.minecraftforge.net/maven"
+		}
+		
+		maven {
+			name = "sonatype"
+			url = "https://oss.sonatype.org/content/repositories/snapshots/"
+		}
     }
-    dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
-
-    }
+	
+	dependencies {
+		classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+	}
 }
 
 apply plugin: 'forge'
 
 version = newFSPVersion
 group = "com.flaxbeard.Steamcraft"
-archivesBaseName = "Flaxbeard'sSteamPower-1.7.10"
+archivesBaseName = "FSP-1.7.10"
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 minecraft {
-    version = forgeVersion
-    runDir = "eclipse"
+	version = forgeVersion
+	runDir = "eclipse"
 	replace "@VERSION@", project.version
 }
 
@@ -66,17 +67,18 @@ dependencies {
 	compile notEnoughItemsVersion
 	compile codeChickenLibVersion
 
-	compile fileTree(dir: 'fsplib', include: '*.jar') // Not using 'lib' since I got a lot of crap in there.
+	compile fileTree(dir: 'fsplib', include: '*.jar') // Avoiding using the generic "lib".
 }
 
 processResources {
+	from(sourceSets.main.resources.srcDirs) {
+		include 'mcmod.info'
+		expand 'version':project.version, 'mcversion':project.minecraft.version
+	}
+
     from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-    }
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-        exclude 'api'
-        include 'steamcraft/api'
+		exclude 'mcmod.info'
+		exclude 'api'
+		include 'steamcraft/api'
     }
 }
