--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ script: ./gradlew build
 notifications:
   email: false
   irc:
-    on_success: change
+    on_success: always
     on_failure: always
     channels:
       - "irc.esper.net#TheSteamTank"
     template:
-      - "%{reposiory_name}/%{branch}#{build_number} (%{commit}): %{message}"
+      - "%{repository_name}/%{branch}#{build_number} (%{commit}): %{message}"
     use_notice: true
     skip_join: true
 branches:
