--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ notifications:
     channels:
       - "irc.esper.net#TheSteamTank"
     template:
-      - "%{repository_name}/%{branch}#{build_number} (%{commit}): %{message}"
+      - "%{repository_name}/%{branch}#%{build_number} (%{commit}): %{message}"
     use_notice: true
     skip_join: true
 branches:
