:art: :seedling: Exosuit Addon Models and Rocksmasher GUI
Models still need to be made into exosuit parts and linked in.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ MinecraftForge-Credits.txt
 MinecraftForge-License.txt
 README.txt
 out/
+bin/
 
 # Who made this messy crap? Whatever.
 !/fsplib/*.jar
