:arrow_up: :broken_heart: :bug: Bump a bunch of dependencies. Remove TiCo support until it actually works. Fix everything so that it actually launches :tada:

--- a/build.gradle
+++ b/build.gradle
@@ -86,8 +86,9 @@ dependencies {
     compile naturaVersion
     compile eioVersion
     */
-    compile mantleVersion
-    compile ticVersion
+//    There are some issues that I can't figure out with these mods.
+//    compile mantleVersion
+//    compile ticVersion
     compile jeiVersion
     compile cclibVersion
 
