:green_heart: This should fix the CI build

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,6 @@ cclibVersion=codechicken:CodeChickenLib:1.9.4-2.0.2.40:deobf
 cccVersion=codechicken:CodeChickenCore:1.9.4-2.0.3.67:deobf"
 
 newFSPVersion=0.29.2
+
+# decompileMc often runs out of memory.
+org.gradle.jvmargs=-Xmx2048M
