so I lied. why do we require it when we only use it a few times though? :/

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,11 @@ repositories {
         name "ProfMobius"
         url "http://mobiusstrip.eu/maven"
     }
+
+    maven {
+        name = "The CB Project"
+        url "http://chickenbones.net/maven"
+    }
 }
 
 /*
@@ -85,6 +90,7 @@ dependencies {
 //    compile mantleVersion
 //    compile ticVersion
     compile jeiVersion
+    compile cclibVersion
 
     // Avoiding using the generic "lib".
     compile fileTree(dir: 'fsplib', include: '*.jar')
