--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
-forgeVersion=1.9.4-12.17.0.1976
-mcpMappings=snapshot_20160627
+forgeVersion=1.10.2-12.18.1.2073
+mcpMappings=snapshot_20160823
 
 # These mods are not updated to 1.9 yet.
-# ic2Version=net.industrial-craft:industrialcraft-2:2.2.757-experimental:dev
 # naturaVersion=mods.natura:natura:1.7.10-98.6a6cca1:deobf
-# eioVersion=com.enderio:EnderIO:1.7.10-2.3.0.404_beta
 
-mantleVersion=slimeknights.mantle:Mantle:1.9.4-0.10.3.jenkins211
-ticVersion=slimeknights:TConstruct:1.9.4-2.3.3.jenkins263
-jeiVersion=mezz.jei:jei_1.9.4:3.6.8.225
-cclibVersion=codechicken:CodeChickenLib:1.9.4-2.0.2.40:deobf
-cccVersion=codechicken:CodeChickenCore:1.9.4-2.0.3.67:deobf
+eioVersion=com.enderio:EnderIO:1.10.2-3.0.1.95_beta
+mantleVersion=slimeknights.mantle:Mantle:1.10.2-0.10.4.jenkins163
+ticVersion=slimeknights:TConstruct:1.10.2-2.4.0.jenkins246
+jeiVersion=mezz.jei:jei_1.10.2:3.9.0.246
+cclibVersion=codechicken:CodeChickenLib:1.10.2-2.2.3.60:deobf
+cccVersion=codechicken:CodeChickenCore:1.10.2-2.1.8.79:deobf
+ic2Version=net.industrial-craft:industrialcraft-2:2.6.9-ex110:dev
 
 newFSPVersion=0.29.2
 
