:arrow_up: Bump CCLib, add EnderCore for EnderIO

--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,7 @@ dependencies {
     compile jeiVersion
     compile cclibVersion
     compile eioVersion
+    compile ecoreVersion
 
     // Avoiding using the generic "lib".
     compile fileTree(dir: 'fsplib', include: '*.jar')
