--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,12 @@ mcpMappings=snapshot_20160823
 # These mods are not updated to 1.9 yet.
 # naturaVersion=mods.natura:natura:1.7.10-98.6a6cca1:deobf
 
+ecoreVersion=com.enderio.core:EnderCore:1.10.2-0.4.1.51-beta
 eioVersion=com.enderio:EnderIO:1.10.2-3.0.1.95_beta
 mantleVersion=slimeknights.mantle:Mantle:1.10.2-0.10.4.jenkins163
 ticVersion=slimeknights:TConstruct:1.10.2-2.4.0.jenkins246
 jeiVersion=mezz.jei:jei_1.10.2:3.9.0.246
-cclibVersion=codechicken:CodeChickenLib:1.10.2-2.2.3.60:deobf
+cclibVersion=codechicken:CodeChickenLib:1.10.2-2.2.3.65:deobf
 cccVersion=codechicken:CodeChickenCore:1.10.2-2.1.8.79:deobf
 ic2Version=net.industrial-craft:industrialcraft-2:2.6.9-ex110:dev
 
