:fu: :white_check_mark: Improve Fan/Vacuum range incrementing math. Add MathUtility tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - oraclejdk8
 install: chmod +x ./gradlew
 before_script: ./gradlew setupDecompWorkspace
-script: ./gradlew build
+script: ./gradlew test
 notifications:
   email: false
   irc:
