:white_check_mark: Coord4 NBT reading/writing tests

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ MinecraftForge-Credits.txt
 MinecraftForge-License.txt
 README.txt
 out/
+logs/
 
 # Who made this messy crap? Whatever.
 !/elib/*.jar
