New maven repo for API via Bintray

--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,20 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        jcenter()
     }
 
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
         classpath 'org.ajoberstar:grgit:1.1.0'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'java'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
 
 version = newModVersion
 
@@ -109,5 +113,38 @@ processResources {
         exclude 'mcmod.info'
         exclude 'api'
         include 'esteemedinnovation/api'
+    }
+}
+
+task apiJar(type: Jar) {
+    classifier = 'api'
+    from(sourceSets.main.output) {
+        include "eiteam/esteemedinnovation/api/**"
+    }
+}
+
+artifacts {
+    archives apiJar
+}
+
+publishing {
+    publications {
+        apiPublication(MavenPublication) {
+            artifact apiJar
+        }
+    }
+}
+
+bintray {
+    user = bintray_user
+    key = bintray_key
+    publications = ['apiPublication'] 
+    pkg {
+        repo = 'Esteemed-Innovation'
+        name = 'Releases'
+        userOrg = 'esteemed-innovation'
+        version {
+            name = project.version
+        }
     }
 }
