:green_heart: Fix Travis CI. If at some point we end up using CI to automatically deploy API stuff to Maven, it should be changed to allow for either a system property or an environment variable.

--- a/build.gradle
+++ b/build.gradle
@@ -136,15 +136,17 @@ publishing {
 }
 
 bintray {
-    user = bintray_user
-    key = bintray_key
-    publications = ['apiPublication'] 
-    pkg {
-        repo = 'Esteemed-Innovation'
-        name = 'Releases'
-        userOrg = 'esteemed-innovation'
-        version {
-            name = project.version
+    if (System.hasProperty('bintray_user') && System.hasProperty('bintray_key')) {
+        user = bintray_user
+        key = bintray_key
+        publications = ['apiPublication'] 
+        pkg {
+            repo = 'Esteemed-Innovation'
+            name = 'Releases'
+            userOrg = 'esteemed-innovation'
+            version {
+                name = project.version
+            }
         }
     }
 }
