:gem: The API is now technically its own mod. Adds an @Mod for the API, and its own config file. Move stuff that was (wrongly) handled by the mod into the API mod. All config files are now in config/EsteemedInnovation. API config is API.cfg Rename EI-materials.json to DrillHeadMaterials.json

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ apply plugin: 'java'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven-publish'
 
-version = newModVersion
+version = newModVersion + '-api' + newAPIVersion
 
 /*
 Usage: `gradle build -Palpha=<version>` where <version> is the next version (different from newModVersion because
@@ -80,7 +80,8 @@ minecraft {
     version = project.forgeVersion
     mappings = project.mcpMappings
     runDir = "eclipse"
-    replace "@VERSION@", project.version
+    replace "@VERSION@", newModVersion
+    replace "@APIVERSION@", newAPIVersion
 }
 
 repositories {
