--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ cccVersion=codechicken:CodeChickenCore:1.10.2-2.1.8.79:deobf
 ic2Version=net.industrial-craft:industrialcraft-2:2.6.9-ex110:dev
 
 newModVersion=0.29.2
+newAPIVersion=1.0.0
 
 # decompileMc often runs out of memory.
 org.gradle.jvmargs=-Xmx2048M
