--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,19 @@
-forgeVersion=1.10.2-12.18.1.2073
-mcpMappings=snapshot_20160823
+forgeVersion=1.11.2-13.20.1.2393
+mcpMappings=snapshot_20170612
 
 # These mods are not updated to 1.9 yet.
 # naturaVersion=mods.natura:natura:1.7.10-98.6a6cca1:deobf
+# cccVersion=codechicken:CodeChickenCore:1.10.2-2.1.8.79:deobf
 
-ecoreVersion=com.enderio.core:EnderCore:1.10.2-0.4.1.51-beta
-eioVersion=com.enderio:EnderIO:1.10.2-3.0.1.95_beta
-mantleVersion=slimeknights.mantle:Mantle:1.10.2-0.10.4.jenkins163
-ticVersion=slimeknights:TConstruct:1.10.2-2.4.0.jenkins246
-jeiVersion=mezz.jei:jei_1.10.2:3.9.0.246
-cclibVersion=codechicken:CodeChickenLib:1.10.2-2.4.2.109:deobf
-cccVersion=codechicken:CodeChickenCore:1.10.2-2.1.8.79:deobf
-ic2Version=net.industrial-craft:industrialcraft-2:2.6.9-ex110:dev
+# These mods are not compiled because of a variety of issues (see buildscript):
+# ticVersion=slimeknights:TConstruct:1.10.2-2.4.0.jenkins246
+# ic2Version=net.industrial-craft:industrialcraft-2:2.6.9-ex110:dev
+# mantleVersion=slimeknights.mantle:Mantle:1.10.2-0.10.4.jenkins163
+
+ecoreVersion=com.enderio.core:EnderCore:1.11.2-0.5.5
+eioVersion=com.enderio:EnderIO:1.11.2-4.0.2
+cclibVersion=codechicken:CodeChickenLib:1.11.2-3.0.0.274:deobf
+jeiVersion=mezz.jei:jei_1.11.2:4.5.0.291
 
 newModVersion=0.29.2
 newAPIVersion=1.0.0
