:wrench: :bug: Use Blood Magic maven, fix lib names

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ ecoreVersion=com.enderio.core:EnderCore:1.11.2-0.5.5
 eioVersion=com.enderio:EnderIO:1.11.2-4.0.2
 cclibVersion=codechicken:CodeChickenLib:1.11.2-3.0.0.274:deobf
 jeiVersion=mezz.jei:jei_1.11.2:4.5.0.291
+bloodmagicVersion=com.wayoftime.bloodmagic:BloodMagic:1.11-2.1.11-80
 
 newModVersion=0.29.2
 newAPIVersion=1.0.0
