--- a/build.gradle
+++ b/build.gradle
@@ -114,6 +114,10 @@ repositories {
         name = "The CB Project"
         url "http://chickenbones.net/maven"
     }
+
+    maven {
+        url "http://tehnut.info/maven"
+    }
 }
 
 /*
@@ -138,6 +142,7 @@ dependencies {
 //    compile ic2Version
     compile jeiVersion
     compile cclibVersion
+    debofCompile bloodmagicVersion
 //    These are dependent on libs which do not compile successfully.
 //    compile eioVersion
 //    compile ecoreVersion
