--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,22 @@
-forgeVersion=1.11.2-13.20.1.2393
-mcpMappings=snapshot_20170612
+forgeVersion=1.12.2-14.23.1.2604
+mcpMappings=snapshot_20180127
 
 # These mods are not updated to 1.9 yet.
 # naturaVersion=mods.natura:natura:1.7.10-98.6a6cca1:deobf
-# cccVersion=codechicken:CodeChickenCore:1.10.2-2.1.8.79:deobf
-
-# These mods are not compiled because of a variety of issues (see buildscript):
-# ticVersion=slimeknights:TConstruct:1.10.2-2.4.0.jenkins246
-# ic2Version=net.industrial-craft:industrialcraft-2:2.6.9-ex110:dev
-# mantleVersion=slimeknights.mantle:Mantle:1.10.2-0.10.4.jenkins163
-
-ecoreVersion=com.enderio.core:EnderCore:1.11.2-0.5.5
-eioVersion=com.enderio:EnderIO:1.11.2-4.0.2
-cclibVersion=codechicken:CodeChickenLib:1.11.2-3.0.0.328:deobf
+naturaVersion=com.progwml6.natura:Natura-1.12:1.12-4.3.0.8
+mantleVersion=slimeknights.mantle:Mantle:1.12-1.3.1.22
+ticVersion=slimeknights:TConstruct:1.12.2-2.9.0.58
+ic2Version=net.industrial-craft:industrialcraft-2:2.8.48-ex112:dev
+cclibVersion=codechicken:CodeChickenLib:1.12.2-3.1.5.334:deobf
 jeiVersion=mezz.jei:jei_1.11.2:4.5.0.291
-bloodmagicVersion=com.wayoftime.bloodmagic:BloodMagic:1.11-2.1.11-80
 
 newModVersion=0.29.2
 newAPIVersion=1.0.0
 
 # decompileMc often runs out of memory.
 org.gradle.jvmargs=-Xmx2048M
+
+# Mods we had support for at some point which are not updated for the latest version of Minecraft we are on:
+# - WAILA
+# - Ender IO/EnderCore
+# - Blood Magic
