--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ if (project.hasProperty('dev')) {
     project.version += '-' + git.head().getAbbreviatedId(6)
 }
 
-finalize.doLast {
+task finalize << {
     if (project.hasProperty('alpha')) {
         incrementAlphaVersion(alpha)
     }
