🐛Fix Natura maven location

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,7 @@
 forgeVersion=1.12.2-14.23.1.2604
 mcpMappings=snapshot_20180127
 
-# These mods are not updated to 1.9 yet.
-# naturaVersion=mods.natura:natura:1.7.10-98.6a6cca1:deobf
-naturaVersion=com.progwml6.natura:Natura-1.12:1.12-4.3.0.8
+naturaVersion=com.progwml6.natura:natura:1.12.2-4.3.2.43
 mantleVersion=slimeknights.mantle:Mantle:1.12-1.3.1.22
 ticVersion=slimeknights:TConstruct:1.12.2-2.9.0.58
 ic2Version=net.industrial-craft:industrialcraft-2:2.8.48-ex112:dev
