--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ cclibVersion=codechicken:CodeChickenLib:1.12.2-3.1.5.334:deobf
 jeiVersion=mezz.jei:jei_1.12.2:4.8.5.138
 wailaVersion=mcp.mobius.waila:Hwyla:1.8.23-B38_1.12:api
 enchiridionVersion=uk.joshiejack.enchiridion:enchiridion_1.12.2:1.12.2-3.3.3-4
-craftTweaker2APIVersion=CraftTweaker2:CraftTweaker2-API:4.1.0+
-craftTweaker2Version=CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.0+
+craftTweaker2APIVersion=CraftTweaker2:CraftTweaker2-API:4.1.6.462
+craftTweaker2Version=CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.6.462
 # This is on the commit number. NOT the version.
 baublesVersion=com.github.azanor:Baubles:573faf2
 
