--- a/build.gradle
+++ b/build.gradle
@@ -127,10 +127,8 @@ repositories {
         url = "http://maven.blamejared.com/"
     }
 
-    // Baubles
     maven {
-        name = "JitPack"
-        url = "https://jitpack.io"
+        url = "https://minecraft.curseforge.com/api/maven/"
     }
 }
 
@@ -140,12 +138,12 @@ dependencies {
     compile naturaVersion
     // compile ic2Version
     compile jeiVersion
-    compile cclibVersion
+    deobfCompile cclibVersion
     compile wailaVersion
     deobfCompile enchiridionVersion
     compile craftTweaker2APIVersion
     compile craftTweaker2Version
-    deobfCompile baublesVersion
+    compile baublesVersion
 //    These are dependent on libs which do not compile successfully.
 //    compile eioVersion
 //    compile ecoreVersion
