--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
-forgeVersion=1.12.2-14.23.1.2604
-mcpMappings=snapshot_20180127
+forgeVersion=1.12.2-14.23.5.2768
+mcpMappings=stable_39
 
 naturaVersion=com.progwml6.natura:natura:1.12.2-4.3.2.43
 mantleVersion=slimeknights.mantle:Mantle:1.12-1.3.1.22
 ticVersion=slimeknights:TConstruct:1.12.2-2.9.0.58
 ic2Version=net.industrial-craft:industrialcraft-2:2.8.48-ex112:dev
-cclibVersion=codechicken:CodeChickenLib:1.12.2-3.1.5.334:deobf
-jeiVersion=mezz.jei:jei_1.12.2:4.8.5.138
+cclibVersion=codechicken:CodeChickenLib:1.12.2-3.2.2.354:universal
+jeiVersion=mezz.jei:jei_1.12.2:4.14.3.245
 wailaVersion=mcp.mobius.waila:Hwyla:1.8.23-B38_1.12:api
 enchiridionVersion=uk.joshiejack.enchiridion:enchiridion_1.12.2:1.12.2-3.3.3-4
 craftTweaker2APIVersion=CraftTweaker2:CraftTweaker2-API:4.1.6.462
 craftTweaker2Version=CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.6.462
 # This is on the commit number. NOT the version.
-baublesVersion=com.github.azanor:Baubles:573faf2
+baublesVersion=baubles:Baubles:1.12:1.5.2
 
 newModVersion=0.29.2
 newAPIVersion=1.0.0
