--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,7 @@
-mc_version=1.15.2
-forge_version=31.1.63
-mapping_version=20200225-1.15.1
+mc_version=1.16.5
+forge_version=36.0.46
+mapping_version=20201028-1.16.3
 mapping_channel=snapshot
+# Mod version
 major_version=0
 minor_version=1
