--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[31,)"
+loaderVersion="[36,)"
 issueTrackerURL="https://github.com/Esteemed-Innovation/Esteemed-Innovation/issues" #optional
 [[mods]]
 modId="esteemedinnovation"
@@ -16,6 +16,12 @@ An innovative tech mod revolving around steam and pressure.
 [[dependencies.esteemedinnovation]]
     modId="forge"
     mandatory=true
-    versionRange="[31,)"
+    versionRange="[36,)"
+    ordering="NONE"
+    side="BOTH"
+[[dependencies.esteemedinnovation]]
+    modId="minecraft"
+    mandatory=true
+    versionRange="[1.16.5,1.17)"
     ordering="NONE"
     side="BOTH"
