:octocat: Add license to mods.toml
This is requirement for 1.16 mods.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,6 @@
 modLoader="javafml"
 loaderVersion="[36,)"
+license="Creative Commons Zero v1.0 Universal"
 issueTrackerURL="https://github.com/Esteemed-Innovation/Esteemed-Innovation/issues" #optional
 [[mods]]
 modId="esteemedinnovation"
